--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ events {}
 http {
     server {
         listen 443 ssl;
-        server_name localhost;
+        server_name nginx;
 
         ssl_certificate     /etc/nginx/certs/server.crt;
         ssl_certificate_key /etc/nginx/certs/server.key;
